# glass2glass

./: .git-blame-ignore-revs  .gitignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  Cargo.toml  DESIGN-C3-cuda.md  DESIGN-M16-caps-nego.md  DESIGN-M16-workaround3-reconfigure.md  DESIGN-M18-caps-resolve.md  DESIGN-caps.md  DESIGN.md  DESIGN_TODO.md  DEVTOOLS.md  PORTABILITY.md  PORTING.md  README.md  STABILITY.md
examples/bevy-g2g-decode/: Cargo.toml  README.md
examples/bevy-g2g-stream/: Cargo.toml  README.md  bevy_g2g.h264
examples/g2g-android-present/: AndroidManifest.xml  Cargo.toml
examples/g2g-cffi/: Cargo.toml  harness.c
examples/g2g-embassy/: Cargo.toml  README.md
examples/g2g-esp32p4/: .gitignore  Cargo.toml  README.md
examples/g2g-noalloc/: Cargo.toml  README.md  host-harness.c
examples/g2g-qemu/: Cargo.toml  README.md  build.rs  memory.x
examples/g2g-size/: Cargo.toml
examples/g2g-stm32h743/: .gitignore  Cargo.toml  README.md
examples/g2g-zephyr/: CMakeLists.txt  README.md  prj.conf
examples/g2g-zephyr-module/: CMakeLists.txt  README.md
examples/noalloc-pipeline/: Cargo.toml
g2g-bench/: Cargo.toml
g2g-bench/benches/: caps.rs  convert.rs  runner.rs
g2g-bridge/: Cargo.toml  build.rs
g2g-bridge/csrc/: gstglass2glass.c
g2g-bridge/src/: bridge.rs  ffi.rs  lib.rs
g2g-bridge/tests/: bridge_graph.rs
g2g-capi/: Cargo.toml
g2g-capi/include/: g2g.h
g2g-capi/src/: lib.rs
g2g-capi/tests/: app_roundtrip.rs  appsink_pull.rs  capi_smoke.rs  lend_zero_copy.rs
g2g-core/: Cargo.toml  build.rs
g2g-core/src/: aggregator.rs  bus.rs  caps.rs  clock.rs  conformance.rs  copyplan.rs  dot.rs  element.rs  error.rs  fanout.rs  format_element.rs  frame.rs  graph.rs  lib.rs  link.rs  log.rs  mediaclock.rs  memory.rs  meta.rs  metrics.rs  pad_template.rs  pool.rs  property.rs  query.rs  rtp.rs  segment.rs  slot.rs  spsc.rs  state.rs  staticelem.rs  staticpool.rs  stream.rs  supervise.rs  sync.rs  tag.rs  tensor.rs  time.rs  wire.rs
g2g-core/tests/: m759_meta_auto_propagation.rs
g2g-enterprise/: Cargo.toml
g2g-enterprise/src/: batcher.rs  lib.rs
g2g-enterprise/tests/: batcher.rs  cuda_wgpu_e2e.rs  cuda_wgpu_scaffold.rs
g2g-mcu/: Cargo.toml
g2g-mcu/src/: adpcm.rs  cffi.rs  g711.rs  grabber.rs  hwh264.rs  hwjpeg.rs  jitter.rs  lend.rs  lib.rs  mixer.rs  pcm.rs  resample.rs  resample_tables.rs  rtp.rs  rtprecv.rs  sht3x.rs  spidisplay.rs  uart.rs  videoconvert.rs  watchdog.rs
g2g-mcu/tests/: m629_spi_display.rs  m630_grabber_src.rs  m631_pcm_sink.rs  m634_forbid_unsafe.rs  m638_g711.rs  m639_adpcm.rs  m640_hwjpeg.rs  m641_resample.rs  m642_mixer.rs  m643_rtp.rs  m644_pcm_convert.rs  m650_cffi_seam.rs  m651_isr_capture.rs  m652_supervised.rs  m653_rx.rs  m654_peripherals.rs  m660_hwh264.rs  m661_camera_h264_rtp.rs  m661_videoconvert.rs
g2g-mcugen/: Cargo.toml  README.md
g2g-mcugen/examples/: display.yaml  flagship.yaml
g2g-mcugen/src/: catalog.rs  codegen.rs  lib.rs  main.rs  model.rs
g2g-mcugen/tests/: compile.rs
g2g-ml/: Cargo.toml
g2g-ml/examples/: detect_overlay.rs
g2g-ml/src/: batcher.rs  burninfer.rs  cudatowgpu.rs  detect.rs  lib.rs  ortinfer.rs  postprocess.rs  safetensors.rs  wgpuinfer.rs  wgpupreprocess.rs
g2g-ml/tests/: android_camera_tpu_probe.rs  android_decode_preprocess.rs  android_mobilenet_tpu_probe.rs  android_nnapi_conv_probe.rs  android_nnapi_probe.rs  batcher.rs  burn_inference.rs  cuda_wgpu_e2e.rs  cuda_wgpu_scaffold.rs  libcamera_preprocess.rs  mobilenet_classify.rs  native_ml_pipeline.rs  ort_inference.rs  postprocess.rs  runner_driven_detect.rs  runner_driven_inference.rs  wgpu_inference.rs  wgpu_preprocess.rs  yolo_detect.rs
g2g-plugin/: Cargo.toml
g2g-plugin/src/: lib.rs
g2g-plugins/: Cargo.toml  build.rs
g2g-plugins/csrc/: gstwrap_host.c
g2g-plugins/examples/: cc_author.rs  cuda_ipc_smoke.rs  gpu_dmabuf_ipc.rs  gst_equivalents.rs  local_cuda_transport.rs  local_dmabuf_transport.rs  metal_video_on_screen.rs  scriptrouter_appsink_egress.rs  subtitle_player.rs  textoverlay_demo.rs  third_party_element.rs  vulkan_video_engine_embed.rs  vulkan_video_hdr_on_screen.rs  vulkan_video_on_screen.rs  vulkan_video_scrubber.rs  vulkan_video_smoke.rs  whep-player.html  whip-publisher.html
g2g-plugins/fuzz/: Cargo.toml  gen-seeds.sh
g2g-plugins/src/: aacparse.rs  aaudio.rs  abr.rs  alpha.rs  alsasink.rs  analyticsoverlay.rs  annexb.rs  appsink.rs  appsrc.rs  audio.rs  audioamplify.rs  audioconvert.rs  audioecho.rs  audiomixer.rs  audiopanorama.rs  audioresample.rs  audiotestsrc.rs  av1dec.rs  av1enc.rs  av1parse.rs  avf.rs  avoffset.rs  bitmapfont.rs  camera2src.rs  canvassink.rs  capsfilter.rs  ccextract.rs  ccinsert.rs  cea.rs  cenc.rs  clock.rs  clockoverlay.rs  compositor.rs  concat.rs  conformance.rs  coreaudio.rs  cuda.rs  cudaglsink.rs  cudakmssink.rs  cudawgpu.rs  (+230 more)
g2g-plugins/tests/: android_aaudio_probe.rs  android_camera2_probe.rs  android_mediacodec_enc_probe.rs  android_mediacodec_smoke.rs  android_mediacodec_wgpu_probe.rs  android_surface_present_probe.rs  appsink_reconfigure.rs  compositor.rs  cudagl_smoke.rs  cudagl_vs_wayland.rs  cudakms_smoke.rs  cudawgpu_spike.rs  dav1d_roundtrip.rs  dmabuf_export_probe.rs  dmabuf_semaphore_probe.rs  dmabuf_timeline_probe.rs  dmabuf_wgpu.rs  ffmpeg_smoke.rs  gap_elements.rs  gst_launch_corpus.rs  gstwrap.rs  kms_smoke.rs  libcamera_dmabuf_probe.rs  libcamera_enum.rs  libcamera_smoke.rs  livekit_smoke.rs  m104_properties.rs  m105_registry_inspect.rs  m106_launch.rs  m107_default_registry.rs  m108_mpegts.rs  m109_ts_streams.rs  m10_muxer.rs  m110_matroska.rs  m112_filesrc_container.rs  m114_tsmux.rs  m115_mkvmux.rs  m116_ogg.rs  m118_launch_branching.rs  m119_flv.rs  (+364 more)
g2g-pyapi/: Cargo.toml  README.md  g2g.pyi  pyproject.toml
g2g-pyapi/examples/: appsink_numpy.py
g2g-pyapi/src/: lib.rs
g2g-python/: Cargo.toml
g2g-python/src/: aggregator.rs  element.rs  format.rs  host.rs  lib.rs  source.rs
g2g-python/tests/: m198_aggregator.rs  m198_analytics.rs  (+8 more)
g2g-validate-wasm/: .gitignore  Cargo.toml
g2g-web/: Cargo.toml  ort-shim.js
xtask/: Cargo.toml
(+222 files in other folders)
