[workspace]
resolver = "2"
members = [
    "g2g-core",
    "g2g-plugin",
    "g2g-plugins",
    "g2g-ml",
    "g2g-bridge",
    "g2g-enterprise",
    "g2g-python",
]
# Out-of-tree dynamic-plugin example (M201): built by the plugin_loader_dlopen
# integration test as a standalone cdylib, exactly as a third party would. Not a
# workspace member, so it builds against g2g-core/g2g-plugin as path "packages"
# with its own target dir and feature resolution.
exclude = ["g2g-plugins/tests/fixtures/example-plugin"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Aaron Boxer <boxerab@protonmail.com>"]
repository = "https://github.com/boxerab/glass2glass"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"

[profile.dev]
debug = "line-tables-only"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
lto = "thin"
codegen-units = 1
