[workspace]
resolver = "2"
members = [
    "g2g-core",
    "g2g-mcu",
    "g2g-mcugen",
    "g2g-plugin",
    "g2g-plugins",
    "g2g-ml",
    "g2g-bridge",
    "g2g-python",
    "g2g-capi",
    "g2g-pyapi",
    "xtask",
]
# Out-of-tree dynamic-plugin example (M201): built by the plugin_loader_dlopen
# integration test as a standalone cdylib, exactly as a third party would. Not a
# workspace member, so it builds against g2g-core/g2g-plugin as path "packages"
# with its own target dir and feature resolution.
exclude = [
    "g2g-plugins/tests/fixtures/example-plugin",
    # Bevy server-side render-and-stream demo (M267): a heavy `bevy` dependency
    # that must stay out of the normal build / CI. Standalone (its own
    # Cargo.lock), built against g2g as path packages. See its README.
    "examples/bevy-g2g-stream",
    # Cortex-M footprint-measurement harness (M268): a no_std staticlib measured
    # with size+gc-sections, kept out of the normal build.
    "examples/g2g-size",
    # Link-time no-heap proof (M625): a no_std staticlib on `g2g-core`
    # default-features=false (no `alloc` crate) with no global allocator; built
    # for thumbv7em by tools/noalloc-check.sh. Kept out of the normal build.
    "examples/g2g-noalloc",
    # The shared heap-free proof pipeline (rlib consumed by g2g-noalloc and
    # g2g-qemu). Kept out of the normal build.
    "examples/noalloc-pipeline",
    # C seam ABI proof (M650): a no_std staticlib driving a g2g pipeline from C
    # capture/send callbacks one frame at a time (the inverse of g2g-freertos).
    # Standalone (own Cargo.lock, no-alloc g2g-core), run by tools/cffi-check.sh.
    "examples/g2g-cffi",
    # M646/M648 host graph-compiler proof: the flagship audio and display
    # graphs GENERATED by g2g-mcugen, each driven with the reference peripherals
    # and checked byte-for-byte against the hand-written reference's checksum.
    # Standalone (own Cargo.lock, no-alloc g2g-core), run by tools/mcugen-check.sh.
    "examples/mcugen-graphs",
    # Emulated Cortex-M execution proof (M628): a bare-metal binary running the
    # noalloc-pipeline on QEMU's MPS2-AN386, via tools/qemu-check.sh. Kept
    # out of the normal build.
    "examples/g2g-qemu",
    # Embassy executor proof (M632): the same pipeline future awaited by a real
    # Embassy task on QEMU's MPS2-AN386, via tools/qemu-check.sh. Kept out of
    # the normal build.
    "examples/g2g-embassy",
    # ESP32-P4 (RISC-V) on-device Tier-1 harness: drives the heap-free display
    # pipeline onto the ESP32-P4-EYE's ST7789 over esp-hal. Depends on esp-hal
    # git `main` (its esp32p4 support is not yet in a release), so it is kept out
    # of the normal build / CI. Standalone, own Cargo.lock. See its README.
    "examples/g2g-esp32p4",
    # STM32H743 (Cortex-M7) on-device harness: the flagship audio graph egressing
    # RTP over on-chip Ethernet via a pure-Rust embassy-net/smoltcp stack. Heavy
    # embassy deps + board-specific bring-up, kept out of the normal build / CI.
    # Standalone, own Cargo.lock. See its README.
    "examples/g2g-stm32h743",
    # Criterion benchmark harness (M284): criterion pulls plotters / rayon, kept
    # out of the normal build / CI. Run via `cargo xtask bench`.
    "g2g-bench",
    # Deployable browser (WebAssembly) cdylib: its cdylib crate-type + std +
    # wasm-bindgen deps must not enter a native `--workspace` build or perturb the
    # no_std baseline's feature resolution. Built for wasm32 only, via
    # `tools/wasm-demo/build.sh`. Standalone (its own Cargo.lock), path-deps g2g.
    "g2g-web",
    # WebSocket test source / receiver for the browser demo (tokio +
    # tokio-tungstenite): dev tools, kept out of the normal build. Standalone.
    "tools/wasm-demo/ws-fixture-server",
    "tools/wasm-demo/ws-recv-server",
    # Native detection server for the demo's Architecture B (server-side
    # inference): tokio + a native ONNX Runtime (ort, downloaded at build time),
    # kept out of the normal build / CI. Standalone, path-deps g2g.
    "tools/wasm-demo/detect-server",
    # Portability showcase (one graph, many targets): a shared processing core
    # reused verbatim by the native runner and the browser build. Std + analytics
    # feature selection, kept out of the no_std `--workspace` baseline resolution.
    "examples/portability-core",
    "examples/portability-native",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Aaron Boxer <boxerab@protonmail.com>"]
repository = "https://github.com/boxerab/glass2glass"

[workspace.lints.rust]
# Treat every compiler warning as an error (the meson `-Werror` analog), so a
# warning cannot accumulate, including in feature-gated code (cuda / ffmpeg /
# ...) that CI never builds. `priority = -1` lets the specific lints below still
# apply on top. To unblock work-in-progress locally without editing this, build
# with `RUSTFLAGS="--cap-lints=warn"` or add a scoped `#[allow(...)]`.
warnings = { level = "deny", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"

[profile.dev]
debug = "line-tables-only"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
lto = "thin"
codegen-units = 1
