[package]
name = "g2g-bridge"
description = "C-FFI bridge that embeds glass2glass sub-graphs inside legacy GStreamer pipelines."
license = "LGPL-2.1-or-later"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

# rlib so Rust integration tests can link the `BridgeGraph` impedance core.
# `cdylib` (the `libgstglass2glass.so` GObject shell) is added with the
# GStreamer-facing FFI layer, a follow-up milestone.

[features]
default = ["std"]
# `multi-thread` makes the boxed graph elements `Send` so the parsed sub-graph
# can move to the dedicated run thread (mirrors g2g-capi).
std = ["g2g-core/std", "g2g-core/runtime", "g2g-core/multi-thread", "g2g-plugins/std", "dep:tokio"]

[dependencies]
g2g-core = { path = "../g2g-core" }
g2g-plugins = { path = "../g2g-plugins" }
tokio = { version = "1", features = ["rt", "time"], optional = true }

[lints]
workspace = true
