[package]
name = "g2g-capi"
description = "C ABI for driving glass2glass pipelines from any language (parse_launch + run + bus)."
license = "LGPL-2.1-or-later"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

# `lib` (rlib) so the integration test links the crate; `cdylib` / `staticlib`
# are the artifacts a non-Rust caller links against.
[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# `multi-thread` makes the boxed graph elements `Send`, so the parsed graph can
# move to the background run thread the C API drives. This crate is inherently
# OS-coupled (threads + C ABI), so it is off the no_std baseline by design.
g2g-core = { path = "../g2g-core", features = ["std", "runtime", "multi-thread"] }
g2g-plugins = { path = "../g2g-plugins", features = ["std"] }
# Mirrors g2g-launch: drive the run future on a single-thread runtime.
tokio = { version = "1", features = ["rt", "macros", "time"] }

[lints]
workspace = true
