[package]
name = "g2g-enterprise"
description = "Multi-stream async ML batchers and tensor schedulers for glass2glass."
license = "AGPL-3.0-or-later"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["g2g-core/std", "g2g-plugins/std", "g2g-ml/std"]
# CUDA<->wgpu GPU keep-on-GPU end-to-end scaffold (M220, Stage 0). Forwards the
# decode side (g2g-plugins libcuda FFI + ffmpeg NVDEC) and the inference side
# (g2g-ml wgpu) into one build so the cross-crate e2e test can compose
# NvdecCuda -> CudaDownload -> WgpuPreprocess -> WgpuInference. g2g-enterprise is
# the only crate that depends on both g2g-ml and g2g-plugins as normal deps, so
# it is the only place this chain can be wired. Linux + NVIDIA + a wgpu adapter.
cuda-wgpu-e2e = ["g2g-ml/wgpu", "g2g-ml/cuda-wgpu", "g2g-plugins/cuda", "g2g-plugins/ffmpeg"]

[dependencies]
g2g-core = { path = "../g2g-core" }
g2g-plugins = { path = "../g2g-plugins" }
g2g-ml = { path = "../g2g-ml" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
# the batcher integration test drives the real run_muxer_sink runner
g2g-core = { path = "../g2g-core", features = ["runtime", "std"] }

[lints]
workspace = true
