[package]
name = "g2g-ml"
description = "ML inference elements for glass2glass: burn (embedded/Wasm) and ort (server) backends."
license = "LGPL-2.1-or-later"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["g2g-core/std"]
# Pure-Rust Burn backend with wgpu (DESIGN.md §5.2): BurnInference runs a
# deterministic linear-layer inference on the GPU through burn's wgpu backend,
# no C++ engine. Targets embedded / Wasm / RTOS / server alike.
burn = ["std", "dep:burn"]
# Inline GPU tensor preprocessing (DESIGN.md §5.1): WgpuPreprocess converts an
# NV12 frame to a normalized f32 NCHW RGB tensor in a wgpu compute shader.
# Pulls wgpu (any D3D12/Vulkan/Metal GPU); implies std.
wgpu = ["std", "dep:wgpu"]
# ONNX Runtime bindings for server-class CUDA / TensorRT / CoreML paths.
# ort's default features download the platform's ONNX Runtime binaries at
# build time (network required on the first build).
ort = ["std", "dep:ort"]
# DirectML execution provider (Windows, any D3D12 GPU). Downloads a
# DirectML-enabled ONNX Runtime build; registration falls back to CPU at
# runtime when no device is available.
directml = ["ort", "ort/directml"]

[dependencies]
g2g-core = { path = "../g2g-core" }
ort = { version = "2.0.0-rc.12", optional = true }
# Inline GPU preprocessing (wgpu feature, §5.1). Default features pull the
# native backend per platform (dx12 on Windows).
wgpu = { version = "29", optional = true }
# Pure-Rust Burn deep-learning framework, wgpu backend (burn feature, §5.2).
burn = { version = "0.21", optional = true, default-features = false, features = ["std", "wgpu"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
