[package]
name = "g2g-ml"
description = "ML inference elements for glass2glass: burn (embedded/Wasm) and ort (server) backends."
license = "LGPL-2.1-or-later"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["g2g-core/std"]
# Detection post-processing + the per-frame analytics metadata graph. Decodes a
# model output tensor into AnalyticsMeta detections (no inference engine needed);
# enables g2g-core's `metadata` feature so frames carry the typed graph.
analytics = ["g2g-core/metadata"]
# Pure-Rust Burn backend with wgpu (DESIGN.md §5.2): BurnInference runs a
# deterministic linear-layer inference on the GPU through burn's wgpu backend,
# no C++ engine. Targets embedded / Wasm / RTOS / server alike.
burn = ["std", "dep:burn"]
# Inline GPU tensor preprocessing (DESIGN.md §5.1): WgpuPreprocess converts an
# NV12 frame to a normalized f32 NCHW RGB tensor in a wgpu compute shader.
# Pulls wgpu (any D3D12/Vulkan/Metal GPU); implies std.
wgpu = ["std", "dep:wgpu"]
# CUDA->wgpu zero-copy bridge element (CudaToWgpu, M220). Joins NVDEC CUDA NV12
# to WgpuPreprocess's surface-import path via g2g-plugins's Vulkan/CUDA
# external-memory interop, no PCIe round-trip. Implies wgpu; pulls
# g2g-plugins/cuda-wgpu (wgpu-hal + ash + libcuda FFI). Linux + NVIDIA only.
cuda-wgpu = ["wgpu", "dep:g2g-plugins", "g2g-plugins/cuda-wgpu"]
# Android zero-copy decode -> preprocess (M304): WgpuPreprocess consumes the RGBA
# MemoryDomain::WgpuTexture that MediaCodecDec emits in GPU-output mode, sampling
# it straight into the tensor with no CPU round-trip. The Android analog of
# cuda-wgpu; pulls g2g-plugins/mediacodec-wgpu for the WgpuRgbaTexture keep-alive.
# Android only. Implies wgpu.
mediacodec-wgpu = ["wgpu", "dep:g2g-plugins", "g2g-plugins/mediacodec-wgpu"]
# libcamera capture -> GPU preprocess (M315): chain LibCameraSrc (Linux libcamera
# capture) through VideoConvert into WgpuPreprocess, a camera-to-NCHW-tensor path
# on the GPU. Pulls g2g-plugins/libcamera (needs libcamera-devel + libclang).
# Linux only. Implies wgpu.
libcamera-wgpu = ["wgpu", "dep:g2g-plugins", "g2g-plugins/libcamera"]
# ONNX Runtime bindings for server-class CUDA / TensorRT / CoreML paths.
# ort's default features download the platform's ONNX Runtime binaries at
# build time (network required on the first build).
ort = ["std", "dep:ort"]
# DirectML execution provider (Windows, any D3D12 GPU). Downloads a
# DirectML-enabled ONNX Runtime build; registration falls back to CPU at
# runtime when no device is available.
directml = ["ort", "ort/directml"]
# CUDA execution provider (NVIDIA GPU, Linux/Windows). Downloads a CUDA-enabled
# ONNX Runtime build; registration is best-effort and falls back to CPU at
# runtime when no CUDA device/runtime is present, like the directml EP. NOT
# verifiable without an NVIDIA device: the in-tree test confirms the EP wires,
# registers, and runs (on CUDA where present, else CPU), not that CUDA executed.
cuda = ["ort", "ort/cuda"]

[dependencies]
g2g-core = { path = "../g2g-core" }
ort = { version = "2.0.0-rc.12", optional = true }
# Inline GPU preprocessing (wgpu feature, §5.1). Default features pull the
# native backend per platform (dx12 on Windows).
wgpu = { version = "29", optional = true }
# Pure-Rust Burn deep-learning framework, wgpu backend (burn feature, §5.2).
burn = { version = "0.21", optional = true, default-features = false, features = ["std", "wgpu"] }
# CUDA<->wgpu interop primitives (cuda-wgpu feature, M220). Optional NORMAL dep
# (acyclic: g2g-plugins does not depend on g2g-ml) so the CudaToWgpu element can
# reach g2g_plugins::cudawgpu. The [dev-dependencies] entry below additionally
# pulls it (default features) for the end-to-end tests.
g2g-plugins = { path = "../g2g-plugins", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
# Native end-to-end ML pipeline test (M61): the source/transform/sink elements
# (VideoTestSrc, VideoConvert, VideoScale, FakeSink) that the g2g-ml preprocess
# and inference elements compose with. g2g-plugins does not depend on g2g-ml,
# so this is dev-only and acyclic.
g2g-plugins = { path = "../g2g-plugins" }

[lints]
workspace = true
